# yolov10-ros-cpp

./: CMakeLists.txt  README.md  package.xml
include/det_pkg/: yolov10.h
launch/: detect.launch
params/: yolov10.yaml
src/: detect.cpp  yolov10.cpp
